objects/SDO_Customer360_Custom_Activity__c.object
<CustomObject>
    <description>What: Part of the Custom Activity Aura Component used to show activities on Lightning Record Pages
Who: Customer 360 Component created
When: 2019</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Custom Activities</relationshipLabel>
        <relationshipName>Custom_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Icon_Color__c</fullName>
        <description>Hex code for activity icon color</description>
        <inlineHelpText>Hex code for activity icon color</inlineHelpText>
        <label>Icon Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>days_ago__c</fullName>
        <description>Number of days in the past that this event occurred relative to today&apos;s date. This allows the activity to show consistently relative to demo date.</description>
        <label>Days Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>icon__c</fullName>
        <description>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</description>
        <inlineHelpText>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <inlineHelpText>Description of activity, displays under title</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <description>Sets display order for items where days ago is the same date, will display items in descending order i.e. 3,2,1</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <description>Time that the activity occurred, suggest entering in &apos;12:00 pm&apos; format</description>
        <label>Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Activity</label>
    <nameField>
        <label>Custom Activity Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>